@startuml

skin rose

title TX Shared Structures - Class Diagram

struct TransmitPowerVector_t {
    uint16_t lengthOfPowerVector
    uint16_t startingPacketLength
    uint16_t packetLengthIncrementPerIndex
    uint8_t powerIndexArray[transmitPowerTableSize]
    uint8_t numOfTransmissionsPerPower[transmitPowerTableSize]
    uint16_t measuredVoltagePerPower[maxNumTxAntennas][transmitPowerTableSize]
}

struct TssiAB {
  short a
  short b
}

struct TssiCalibrationDataVer6_7_AntennaData {
  std::array<TssiAB, maxNumRegions> pointsAB
  std::array<int32_t, maxNumRegions> s2dGain
  std::array<int32_t, maxNumRegions> s2dOffset
  uint8_t maxPower
  uint8_t uEvm
  uint8_t uEvmGain
}


TssiCalibrationData <|-- TssiCalibrationDataVer6_7
TssiCalibrationDataVer6_7 <|-- TssiCalibrationDataVer6
TssiCalibrationDataVer6_7 <|-- TssiCalibrationDataVer7
TssiCalibrationDataVer6_7 *- TssiCalibrationDataVer6_7_AntennaData

abstract class TssiCalibrationData {
  +uint16_t channel
  +Band band 
}

abstract class TssiCalibrationDataVer6_7 {
  +AntennaMask antennaMask
  +uint8_t numRegions
  +Bandwidth bw

  +std::array<AntennaData, maxNumTxAntennas> antennas
}

class TssiCalibrationDataVer6 {
}

class TssiCalibrationDataVer7 {
}

@enduml